{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 6219,
  "lineage": "95cdf14b-030f-6d59-7ebf-b8557b948935",
  "resources": [
    {
      "module": "module.Prod_VPC_whole.module.Prod_igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "module.Prod_VPC_whole.module.Prod_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:211125759186:internet-gateway/igw-0cb06391949bb9db3",
            "id": "igw-0cb06391949bb9db3",
            "owner_id": "211125759186",
            "tags": {
              "Name": "PROD-igw"
            },
            "tags_all": {
              "Name": "PROD-igw"
            },
            "vpc_id": "vpc-0f3902eda0cc3c4d5"
          },
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_VPC_whole.module.Prod_private_rtb",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "module.Prod_VPC_whole.module.Prod_private_rtb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00b82847efab84e17",
            "arn": "arn:aws:ec2:ap-southeast-2:211125759186:elastic-ip/eipalloc-00b82847efab84e17",
            "association_id": "eipassoc-042244f9d5e365786",
            "domain": "vpc",
            "id": "eipalloc-00b82847efab84e17",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0f635d036a266238a",
            "private_dns": "ip-10-20-10-243.ap-southeast-2.compute.internal",
            "private_ip": "10.20.10.243",
            "public_dns": "ec2-54-252-225-2.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.252.225.2",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.Prod_VPC_whole.module.Prod_private_rtb",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "module.Prod_VPC_whole.module.Prod_private_rtb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00b82847efab84e17",
            "association_id": "eipassoc-042244f9d5e365786",
            "connectivity_type": "public",
            "id": "nat-09a7c2f7e22988499",
            "network_interface_id": "eni-0f635d036a266238a",
            "private_ip": "10.20.10.243",
            "public_ip": "54.252.225.2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0191adda0228e758d"
          },
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_private_rtb.aws_eip.nat_gateway_eip",
            "module.Prod_VPC_whole.module.Prod_public_subnets.aws_subnet.my_subnet",
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_VPC_whole.module.Prod_private_rtb",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_subnet_route",
      "provider": "module.Prod_VPC_whole.module.Prod_private_rtb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0893cb084c19da1241080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09a7c2f7e22988499",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0893cb084c19da124",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_private_rtb.aws_eip.nat_gateway_eip",
            "module.Prod_VPC_whole.module.Prod_private_rtb.aws_nat_gateway.nat_gateway",
            "module.Prod_VPC_whole.module.Prod_private_rtb.aws_route_table.private_subnet_route_table",
            "module.Prod_VPC_whole.module.Prod_public_subnets.aws_subnet.my_subnet",
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_VPC_whole.module.Prod_private_rtb",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet_route_table",
      "provider": "module.Prod_VPC_whole.module.Prod_private_rtb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:211125759186:route-table/rtb-0893cb084c19da124",
            "id": "rtb-0893cb084c19da124",
            "owner_id": "211125759186",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09a7c2f7e22988499",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD_private_rtb"
            },
            "tags_all": {
              "Name": "PROD_private_rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3902eda0cc3c4d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_VPC_whole.module.Prod_private_rtb",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my-rtb-association",
      "provider": "module.Prod_VPC_whole.module.Prod_private_rtb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0219826db0cbf15b9",
            "route_table_id": "rtb-0893cb084c19da124",
            "subnet_id": "subnet-032fff1f4d425b1bb"
          },
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_private_rtb.aws_route_table.private_subnet_route_table",
            "module.Prod_VPC_whole.module.Prod_private_subnets.aws_subnet.my_subnet",
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d468f843960fcc7",
            "route_table_id": "rtb-0893cb084c19da124",
            "subnet_id": "subnet-0b3f50af46e780f93"
          },
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_private_rtb.aws_route_table.private_subnet_route_table",
            "module.Prod_VPC_whole.module.Prod_private_subnets.aws_subnet.my_subnet",
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_VPC_whole.module.Prod_private_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "module.Prod_VPC_whole.module.Prod_private_security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:211125759186:security-group/sg-07747c8d8ccfd1877",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-068f9617a69c14f84"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07747c8d8ccfd1877",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-068f9617a69c14f84"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "PROD-private-sg",
            "name_prefix": "",
            "owner_id": "211125759186",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PROD-private-sg"
            },
            "tags_all": {
              "Name": "PROD-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3902eda0cc3c4d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_security_group.aws_security_group.sg",
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_VPC_whole.module.Prod_private_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "module.Prod_VPC_whole.module.Prod_private_subnets.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:211125759186:subnet/subnet-032fff1f4d425b1bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.20.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032fff1f4d425b1bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125759186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod_private_subnet1"
            },
            "tags_all": {
              "Name": "prod_private_subnet1"
            },
            "vpc_id": "vpc-0f3902eda0cc3c4d5"
          },
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:211125759186:subnet/subnet-0b3f50af46e780f93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.20.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3f50af46e780f93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125759186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod_private_subnet2"
            },
            "tags_all": {
              "Name": "prod_private_subnet2"
            },
            "vpc_id": "vpc-0f3902eda0cc3c4d5"
          },
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_VPC_whole.module.Prod_public_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "module.Prod_VPC_whole.module.Prod_public_subnets.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:211125759186:subnet/subnet-0191adda0228e758d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.20.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0191adda0228e758d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125759186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod_public_subnet1"
            },
            "tags_all": {
              "Name": "prod_public_subnet1"
            },
            "vpc_id": "vpc-0f3902eda0cc3c4d5"
          },
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:211125759186:subnet/subnet-08c89c7fbacb8a9e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.20.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c89c7fbacb8a9e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125759186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod_public_subnet2"
            },
            "tags_all": {
              "Name": "prod_public_subnet2"
            },
            "vpc_id": "vpc-0f3902eda0cc3c4d5"
          },
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_VPC_whole.module.Prod_rtb",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_rtb",
      "provider": "module.Prod_VPC_whole.module.Prod_rtb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:211125759186:route-table/rtb-0f8241dbb73114c50",
            "id": "rtb-0f8241dbb73114c50",
            "owner_id": "211125759186",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cb06391949bb9db3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-06762b25202217ac4"
              }
            ],
            "tags": {
              "Name": "PROD-rtb"
            },
            "tags_all": {
              "Name": "PROD-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3902eda0cc3c4d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_igw.aws_internet_gateway.my-igw",
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1",
            "module.Prod_VPC_whole.module.create_vpc_peering.aws_vpc_peering_connection.VPC_peer",
            "module.Uat_VPC_whole.module.Uat_vpc1.aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_VPC_whole.module.Prod_rtb_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my-rtb-association",
      "provider": "module.Prod_VPC_whole.module.Prod_rtb_association.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b23867a69d1007ac",
            "route_table_id": "rtb-0f8241dbb73114c50",
            "subnet_id": "subnet-0191adda0228e758d"
          },
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_igw.aws_internet_gateway.my-igw",
            "module.Prod_VPC_whole.module.Prod_public_subnets.aws_subnet.my_subnet",
            "module.Prod_VPC_whole.module.Prod_rtb.aws_route_table.my_rtb",
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1",
            "module.Prod_VPC_whole.module.create_vpc_peering.aws_vpc_peering_connection.VPC_peer",
            "module.Uat_VPC_whole.module.Uat_vpc1.aws_vpc.my-vpc-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b88304983bc4cd2b",
            "route_table_id": "rtb-0f8241dbb73114c50",
            "subnet_id": "subnet-08c89c7fbacb8a9e9"
          },
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_igw.aws_internet_gateway.my-igw",
            "module.Prod_VPC_whole.module.Prod_public_subnets.aws_subnet.my_subnet",
            "module.Prod_VPC_whole.module.Prod_rtb.aws_route_table.my_rtb",
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1",
            "module.Prod_VPC_whole.module.create_vpc_peering.aws_vpc_peering_connection.VPC_peer",
            "module.Uat_VPC_whole.module.Uat_vpc1.aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_VPC_whole.module.Prod_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "module.Prod_VPC_whole.module.Prod_security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:211125759186:security-group/sg-068f9617a69c14f84",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-068f9617a69c14f84",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "PROD-sg",
            "name_prefix": "",
            "owner_id": "211125759186",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PROD-sg"
            },
            "tags_all": {
              "Name": "PROD-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3902eda0cc3c4d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_VPC_whole.module.Prod_vpc1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc-1",
      "provider": "module.Prod_VPC_whole.module.Prod_vpc1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:211125759186:vpc/vpc-0f3902eda0cc3c4d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-05e663d1e7a7f253a",
            "default_route_table_id": "rtb-00820b5f18b800067",
            "default_security_group_id": "sg-00fd822d18292b6ac",
            "dhcp_options_id": "dopt-0433e1e73086eafee",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f3902eda0cc3c4d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00820b5f18b800067",
            "owner_id": "211125759186",
            "tags": {
              "Name": "PROD-vpc"
            },
            "tags_all": {
              "Name": "PROD-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.Prod_VPC_whole.module.create_load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "module.Prod_VPC_whole.module.create_load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:211125759186:loadbalancer/app/PROD-lb/671fbe7e8b317c22",
            "arn_suffix": "app/PROD-lb/671fbe7e8b317c22",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "PROD-lb-1703204853.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:211125759186:loadbalancer/app/PROD-lb/671fbe7e8b317c22",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "PROD-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-068f9617a69c14f84"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0191adda0228e758d"
              },
              {
                "subnet_id": "subnet-08c89c7fbacb8a9e9"
              }
            ],
            "subnets": [
              "subnet-0191adda0228e758d",
              "subnet-08c89c7fbacb8a9e9"
            ],
            "vpc_id": "vpc-0f3902eda0cc3c4d5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_public_subnets.aws_subnet.my_subnet",
            "module.Prod_VPC_whole.module.Prod_security_group.aws_security_group.sg",
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_VPC_whole.module.create_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_listener",
      "provider": "module.Prod_VPC_whole.module.create_load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:211125759186:listener/app/PROD-lb/671fbe7e8b317c22/0b986bcdaa5a76e3",
            "certificate_arn": "arn:aws:acm:ap-southeast-2:211125759186:certificate/b2a61559-b32f-4bec-94d6-f6c6d2c6abff",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:211125759186:targetgroup/prod-tg/d65ab908c859459e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:211125759186:listener/app/PROD-lb/671fbe7e8b317c22/0b986bcdaa5a76e3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:211125759186:loadbalancer/app/PROD-lb/671fbe7e8b317c22",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_public_subnets.aws_subnet.my_subnet",
            "module.Prod_VPC_whole.module.Prod_security_group.aws_security_group.sg",
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1",
            "module.Prod_VPC_whole.module.create_alb_ssl.aws_acm_certificate.my_ssl",
            "module.Prod_VPC_whole.module.create_load_balancer.aws_lb.lb",
            "module.Prod_VPC_whole.module.create_load_balancer.aws_lb_target_group.prod_tg"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_VPC_whole.module.create_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule_2",
      "provider": "module.Prod_VPC_whole.module.create_load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:211125759186:targetgroup/uat-tg/7c979e90a27e73ce",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:211125759186:listener-rule/app/PROD-lb/671fbe7e8b317c22/0b986bcdaa5a76e3/81c2a3ff9de820d1",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "uat.yuanpawsnclawshotel.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:211125759186:listener-rule/app/PROD-lb/671fbe7e8b317c22/0b986bcdaa5a76e3/81c2a3ff9de820d1",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:211125759186:listener/app/PROD-lb/671fbe7e8b317c22/0b986bcdaa5a76e3",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_public_subnets.aws_subnet.my_subnet",
            "module.Prod_VPC_whole.module.Prod_security_group.aws_security_group.sg",
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1",
            "module.Prod_VPC_whole.module.create_alb_ssl.aws_acm_certificate.my_ssl",
            "module.Prod_VPC_whole.module.create_load_balancer.aws_lb.lb",
            "module.Prod_VPC_whole.module.create_load_balancer.aws_lb_listener.my_listener",
            "module.Prod_VPC_whole.module.create_load_balancer.aws_lb_target_group.prod_tg",
            "module.Prod_VPC_whole.module.create_load_balancer.aws_lb_target_group.uat_tg"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_VPC_whole.module.create_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "prod_tg",
      "provider": "module.Prod_VPC_whole.module.create_load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:211125759186:targetgroup/prod-tg/d65ab908c859459e",
            "arn_suffix": "targetgroup/prod-tg/d65ab908c859459e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health-check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:211125759186:targetgroup/prod-tg/d65ab908c859459e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:211125759186:loadbalancer/app/PROD-lb/671fbe7e8b317c22"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f3902eda0cc3c4d5"
          },
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_VPC_whole.module.create_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "uat_tg",
      "provider": "module.Prod_VPC_whole.module.create_load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:211125759186:targetgroup/uat-tg/7c979e90a27e73ce",
            "arn_suffix": "targetgroup/uat-tg/7c979e90a27e73ce",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health-check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:211125759186:targetgroup/uat-tg/7c979e90a27e73ce",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:211125759186:loadbalancer/app/PROD-lb/671fbe7e8b317c22"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "uat-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f3902eda0cc3c4d5"
          },
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_VPC_whole.module.create_vpc_peering",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "prod_network_acl",
      "provider": "module.Prod_VPC_whole.module.create_vpc_peering.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:211125759186:network-acl/acl-0c6a8e028b5e7407a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c6a8e028b5e7407a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "211125759186",
            "subnet_ids": [],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0f3902eda0cc3c4d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1",
            "module.Uat_VPC_whole.module.Uat_vpc1.aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_VPC_whole.module.create_vpc_peering",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "uat_network_acl",
      "provider": "module.Prod_VPC_whole.module.create_vpc_peering.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:211125759186:network-acl/acl-0afc49885aaa0a81a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.20.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0afc49885aaa0a81a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.20.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "211125759186",
            "subnet_ids": [],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-02c4f607f8e7af0f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1",
            "module.Uat_VPC_whole.module.Uat_vpc1.aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_VPC_whole.module.create_vpc_peering",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "VPC_peer",
      "provider": "module.Prod_VPC_whole.module.create_vpc_peering.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "auto_accept": true,
            "id": "pcx-06762b25202217ac4",
            "peer_owner_id": "211125759186",
            "peer_region": "ap-southeast-2",
            "peer_vpc_id": "vpc-02c4f607f8e7af0f8",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-0f3902eda0cc3c4d5"
          },
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1",
            "module.Uat_VPC_whole.module.Uat_vpc1.aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.Uat_VPC_whole.module.Uat_igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "module.Uat_VPC_whole.module.Uat_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:211125759186:internet-gateway/igw-04e52921523d34865",
            "id": "igw-04e52921523d34865",
            "owner_id": "211125759186",
            "tags": {
              "Name": "UAT-igw"
            },
            "tags_all": {
              "Name": "UAT-igw"
            },
            "vpc_id": "vpc-02c4f607f8e7af0f8"
          },
          "dependencies": [
            "module.Uat_VPC_whole.module.Uat_vpc1.aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.Uat_VPC_whole.module.Uat_rtb",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_rtb",
      "provider": "module.Uat_VPC_whole.module.Uat_rtb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:211125759186:route-table/rtb-0203ad4f09cc6def1",
            "id": "rtb-0203ad4f09cc6def1",
            "owner_id": "211125759186",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04e52921523d34865",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.20.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-06762b25202217ac4"
              }
            ],
            "tags": {
              "Name": "UAT-rtb"
            },
            "tags_all": {
              "Name": "UAT-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c4f607f8e7af0f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1",
            "module.Prod_VPC_whole.module.create_vpc_peering.aws_vpc_peering_connection.VPC_peer",
            "module.Uat_VPC_whole.module.Uat_igw.aws_internet_gateway.my-igw",
            "module.Uat_VPC_whole.module.Uat_vpc1.aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.Uat_VPC_whole.module.Uat_rtb_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my-rtb-association",
      "provider": "module.Uat_VPC_whole.module.Uat_rtb_association.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9bf2e16cf027d19",
            "route_table_id": "rtb-0203ad4f09cc6def1",
            "subnet_id": "subnet-0527510ea7c0141f3"
          },
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1",
            "module.Prod_VPC_whole.module.create_vpc_peering.aws_vpc_peering_connection.VPC_peer",
            "module.Uat_VPC_whole.module.Uat_igw.aws_internet_gateway.my-igw",
            "module.Uat_VPC_whole.module.Uat_rtb.aws_route_table.my_rtb",
            "module.Uat_VPC_whole.module.Uat_subnets.aws_subnet.my_subnet",
            "module.Uat_VPC_whole.module.Uat_vpc1.aws_vpc.my-vpc-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e490885ceb7ef34",
            "route_table_id": "rtb-0203ad4f09cc6def1",
            "subnet_id": "subnet-0697b77f2c7d6397e"
          },
          "dependencies": [
            "module.Prod_VPC_whole.module.Prod_vpc1.aws_vpc.my-vpc-1",
            "module.Prod_VPC_whole.module.create_vpc_peering.aws_vpc_peering_connection.VPC_peer",
            "module.Uat_VPC_whole.module.Uat_igw.aws_internet_gateway.my-igw",
            "module.Uat_VPC_whole.module.Uat_rtb.aws_route_table.my_rtb",
            "module.Uat_VPC_whole.module.Uat_subnets.aws_subnet.my_subnet",
            "module.Uat_VPC_whole.module.Uat_vpc1.aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.Uat_VPC_whole.module.Uat_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "module.Uat_VPC_whole.module.Uat_security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:211125759186:security-group/sg-08aa0a18869115f02",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08aa0a18869115f02",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "UAT-sg",
            "name_prefix": "",
            "owner_id": "211125759186",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "UAT-sg"
            },
            "tags_all": {
              "Name": "UAT-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c4f607f8e7af0f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Uat_VPC_whole.module.Uat_vpc1.aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.Uat_VPC_whole.module.Uat_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "module.Uat_VPC_whole.module.Uat_subnets.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:211125759186:subnet/subnet-0527510ea7c0141f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0527510ea7c0141f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125759186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uat_subnet1"
            },
            "tags_all": {
              "Name": "uat_subnet1"
            },
            "vpc_id": "vpc-02c4f607f8e7af0f8"
          },
          "dependencies": [
            "module.Uat_VPC_whole.module.Uat_vpc1.aws_vpc.my-vpc-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:211125759186:subnet/subnet-0697b77f2c7d6397e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0697b77f2c7d6397e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125759186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uat_subnet2"
            },
            "tags_all": {
              "Name": "uat_subnet2"
            },
            "vpc_id": "vpc-02c4f607f8e7af0f8"
          },
          "dependencies": [
            "module.Uat_VPC_whole.module.Uat_vpc1.aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.Uat_VPC_whole.module.Uat_vpc1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc-1",
      "provider": "module.Uat_VPC_whole.module.Uat_vpc1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:211125759186:vpc/vpc-02c4f607f8e7af0f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-061fa79e38ab03522",
            "default_route_table_id": "rtb-09ba2fd2f2190f90c",
            "default_security_group_id": "sg-0a1ebe8279e0bdac0",
            "dhcp_options_id": "dopt-0433e1e73086eafee",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02c4f607f8e7af0f8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09ba2fd2f2190f90c",
            "owner_id": "211125759186",
            "tags": {
              "Name": "UAT-vpc"
            },
            "tags_all": {
              "Name": "UAT-vpc"
            }
          }
        }
      ]
    }
  ]
}